# data-studio

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml  config.json
cli/src/: main.rs
common/: Cargo.toml
common/src/: appconfig.rs  application.rs  lib.rs
common/src/providers/: provider.rs  registry.rs
common2/: build.rs
common2/src/: appconfig.rs
common2/src/providers/: registry.rs
data-studio/: Cargo.toml  build.rs
data-studio/resources/: data-sources.ui  ds.gresource.xml  main.glade  main.menu.ui  main.ui
data-studio/src/: main.rs  models.rs  view_models.rs
data-studio/src/components/: main_window.rs  mod.rs
data-studio/src/components/data_sources/: data_sources.rs  mod.rs
data-studio/src/models/: application.rs  application_model.rs
data-studio/src/ui/: main_window.rs  mod.rs
data-studio/src/view_models/: main_view_model.rs
data-studio/src/views/: main_window.rs
ds1/: Cargo.toml
ds1/resources/: main.ui
ds1/src/: main.rs
ds1/src/components/: mod.rs
gds/: Cargo.toml  build.rs
gds/resources/: gds.gresource.xml  main.ui  style.css  view.data_sources.ui  view.group.ui  view.source.ui
gds/src/: main.rs
gds/src/components/: mod.rs  window.rs
gds/src/components/group/: group.rs  mod.rs
gds/src/components/main_window/: main_window.rs  mod.rs
gds/src/components/source/: mod.rs  source.rs
gds/src/components/sources/: mod.rs  sources.rs  tree.rs
old/: Cargo.toml
old/cli/: Cargo.toml  config.toml
old/common/: Cargo.toml
old/common/src/: application.rs  lib.rs
old/common2/: Cargo.toml
old/common2/src/: application.rs  lib.rs  providers.rs
old/common2/src/providers/: provider.rs
old/providers/mysql/: Cargo.toml
old/ui/resources/: resources.gresource.xml
old/ui/resources/ui/: connection-providers.glade  main.glade
old/ui/src/: app.rs  constants.rs  ui.rs
old/ui/src/ui/: providers.rs
plugin/: Cargo.toml
plugin/src/: lib.rs
providers/postgresql/: Cargo.toml
providers/postgresql/src/: provider.rs
ui/: Cargo.toml  build.rs
ui/resources/: resources.gresource.xml
ui/resources/ui/: connection-providers.glade  editor.sql.glade  main.glade
ui/src/: constants.rs  main.rs  ui.rs
ui/src/ui/: application.rs  macros.rs  main_window.rs  providers.rs
