[package]
name = "data-studio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
env_logger = "*"

gio = "0.15.11"

relm4 = "0.4.4"
#relm4 = { version = "0.4", features = ["macros"] }
#relm4-components = "0.4"