[package]
name = "gds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
env_logger = "*"

#gio = "*"
#glib = "*"
#gtk4-macros = "*"
gtk = { version = "*", package = "gtk4", features = ["v4_6"] }


#relm4 = { version = "*", features = ["macros"]}
#relm4-components = "*"

[build-dependencies]
gio = "*"