[package]
name = "gds-ui"
version = "0.1.0"
authors = ["ferd"]
edition = "2018"
build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.9", features = ["v3_22"] }
#gtk-macros = ""
gio = { version = "0.9", features = ["v2_46"] }
glib = ""