[package]
name = "gds-ui"
version = "0.1.0"
authors = ["ferd"]
edition = "2018"
build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.9", features = ["v3_22"] }
#gtk = { git = "https://github.com/gtk-rs/gtk4-rs", package = "gtk4" }
gtk-macros = "0.3.0"
gio = { version = "0.9", features = ["v2_46"] }
glib = "0.10.3"
gdk = "0.13.2"

clap = "2.33.3"
config = "0.11"
common = { path = "../common" }