[package]
name = "cli"
version = "0.1.0"
authors = ["ferd <beowulf1416@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
clap = "2.33.3"
serde = { version = "^1.0.8", features = ["derive"] }
serde_json = "1.0"
config = "0.11"
#config = { path = "" }