[package]
name = "common"
version = "0.1.0"
authors = ["ferd <beowulf1416@gmail.com>"]
edition = "2018"
build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
#crate-type=["dylib"]
crate-type = ["rlib","dylib"]

[build-dependencies]
#rustc_version = "0.3"
#libloading = "0.7"
serde = { version = "^1.0.8", features = ["derive"] }
#serde_json = "1.0"
#config = "0.11"