[package]
name = "postgresql"
version = "0.1.0"
authors = ["ferd <beowulf1416@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["dylib"]
name="plugin_postgresql"

[dependencies]
common = { path = "../../common" }